# subtitle-ai-translation

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: __init__.py  app.py  cli.py  config.py  srt_parser.py  translator.py
